--- a/lab9_student.ipynb
+++ b/lab9_student.ipynb
@@ -129,8 +129,9 @@
     "# 2. Fit it using X (year) and y (CO₂ concentration)\n",
     "# 3. Use the model to predict CO₂ values (co2_pred)\n",
     "\n",
-    "m_co2 = \n",
-    "co2_pred = \n",
+    "m_co2 = LinearRegression()\n",
+    "m_co2.fit(X, y)\n",
+    "co2_pred = m_co2.predict(X)\n",
     "\n",
     "# ----------------------------\n",
     "# Implementation Ends Here\n",
@@ -166,7 +167,7 @@
     "axes[2].set_title(\"QQ Plot of Residuals\")\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -223,7 +224,7 @@
     "# 2. Store results in a variable called future_pred\n",
     "\n",
     "\n",
-    "future_pred = \n",
+    "future_pred = m_co2.predict(future_years)\n",
     "\n",
     "# ----------------------------\n",
     "# Implementation Ends Here\n",
@@ -305,8 +306,8 @@
     "# 2. Fit an Ordinary Least Squares model:\n",
     "#       model_sm = sm.OLS(y, X).fit() this will be on Yearly CO2 AND X_sm\n",
     "\n",
-    "X_sm = \n",
-    "model_sm = \n",
+    "X_sm = sm.add_constant(co2_yearly['Year'])\n",
+    "model_sm = sm.OLS(y, X_sm).fit()\n",
     "\n",
     "# ----------------------------\n",
     "# Implementation Ends Here\n",
@@ -357,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,8 +377,8 @@
     "# 2. Fit Transform X into polynomial features (adds Year² term)\n",
     "#    The transformed matrix will have columns: [1, Year, Year²]\n",
     "\n",
-    "poly = \n",
-    "X_poly = \n",
+    "poly = PolynomialFeatures(degree=2)\n",
+    "X_poly = poly.fit_transform(X)\n",
     "\n",
     "# ------------------------------------------------\n",
     "# TODO — Fit a linear model on polynomial features\n",
@@ -386,9 +387,9 @@
     "# 2. Predict y values (y_poly_pred) using the trained model\n",
     "#    Note: This is still linear regression — but on expanded features\n",
     "\n",
-    "\n",
-    "model_poly = \n",
-    "y_poly_pred = \n",
+    "model_poly = LinearRegression()\n",
+    "model_poly.fit(X_poly, y)\n",
+    "y_poly_pred = model_poly.predict(X_poly)\n",
     "\n",
     "# ----------------------------\n",
     "# Implementation Ends Here\n",
@@ -474,7 +475,7 @@
     "# so you must add it manually using sm.add_constant().\n",
     "# This creates: [1, Year, Year^2]\n",
     "\n",
-    "X_ols = \n",
+    "X_ols = sm.add_constant(X_ols)\n",
     "\n",
     "# ------------------------------------------------\n",
     "# TODO — Define the response variable (CO₂ values)\n",
@@ -482,14 +483,13 @@
     "# We will fit the quadratic regression: CO₂ = β0 + β1*Year + β2*(Year²) using OLS from stats models\n",
     "\n",
     "\n",
-    "model_poly_ols = \n",
+    "model_poly_ols = sm.OLS(y_ols, X_ols).fit()\n",
     "\n",
     "# ----------------------------\n",
     "# Implementation Ends Here\n",
     "# ----------------------------\n",
     "\n",
-    "\n",
-    "print(model_poly_ols.summary())\n"
+    "print(model_poly_ols.summary())"
    ]
   },
   {
@@ -591,8 +591,9 @@
     "# 2. Fit the model using X_temp (years) and y_temp (temperature anomaly)\n",
     "# 3. Use the model to predict fitted values, store in temp_pred\n",
     "\n",
-    "m_temp = \n",
-    "temp_pred = \n",
+    "m_temp = LinearRegression()\n",
+    "m_temp.fit(X_temp, y_temp)\n",
+    "temp_pred = m_temp.predict(X_temp)\n",
     "\n",
     "# ----------------------------\n",
     "# Implementation Ends Here\n",
@@ -682,7 +683,7 @@
     "# 1. Use the trained model m_temp\n",
     "# 2. Apply .predict() to the array of future years\n",
     "# 3. Store the result in future_temp_pred\n",
-    "future_temp_pred = \n",
+    "future_temp_pred = m_temp.predict(future_years_temp)\n",
     "\n",
     "# ----------------------------\n",
     "# Implementation Ends Here\n",
@@ -752,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,10 +767,10 @@
     "# 2. Assign the temperature data to y_temp_ols\n",
     "# 3. Fit an OLS model: sm.OLS(y, X).fit() on y_temp_ols, X_temp_ols\n",
     "\n",
-    "X_temp_ols = \n",
-    "y_temp_ols = \n",
+    "X_temp_ols = sm.add_constant(temp_yearly['Year'])\n",
+    "y_temp_ols = temp_yearly['TempChange']\n",
     "\n",
-    "model_temp_ols = \n",
+    "model_temp_ols = sm.OLS(y_temp_ols, X_temp_ols).fit()\n",
     "\n",
     "# ----------------------------\n",
     "# Implementation Ends Here\n",
@@ -837,8 +838,8 @@
     "#    The transformed matrix adds:\n",
     "#      [1, Year, Year²]\n",
     "\n",
-    "poly_temp = \n",
-    "X_temp_poly = \n",
+    "poly_temp = PolynomialFeatures(degree=2)\n",
+    "X_temp_poly = poly_temp.fit_transform(X_temp)\n",
     "\n",
     "# ------------------------------------------------\n",
     "# TODO — Fit the quadratic regression model and make predictions\n",
@@ -846,8 +847,8 @@
     "# 1. Fit a LinearRegression model on the transformed features\n",
     "# 2. Generate fitted values (y_temp_poly_pred)\n",
     "\n",
-    "model_temp_poly = \n",
-    "y_temp_poly_pred = \n",
+    "model_temp_poly = LinearRegression().fit(X_temp_poly, y_temp)\n",
+    "y_temp_poly_pred = model_temp_poly.predict(X_temp_poly)\n",
     "\n",
     "# ----------------------------\n",
     "# Implementation Ends Here\n",
@@ -933,8 +934,8 @@
     "# 1. Add an intercept column using sm.add_constant() to X_temp_ols_poly\n",
     "# 2. Fit OLS to y_temp_ols_poly, X_temp_ols_poly using statsmodel\n",
     "\n",
-    "X_temp_ols_poly = \n",
-    "model_temp_poly_ols = \n",
+    "X_temp_ols_poly = sm.add_constant(X_temp_ols_poly)\n",
+    "model_temp_poly_ols = sm.OLS(y_temp_ols_poly, X_temp_ols_poly).fit()\n",
     "\n",
     "# ----------------------------\n",
     "# Implementation Ends Here\n",
@@ -995,7 +996,7 @@
     "# ------------------------------------------------\n",
     "# Use the previously fitted m_co2 model to predict CO₂ from Year\n",
     "\n",
-    "merged['Fitted_CO2'] = \n",
+    "merged['Fitted_CO2'] = m_co2.predict(merged[['Year']])\n",
     "\n",
     "# ------------------------------------------------\n",
     "# TODO — Fit temperature model using fitted CO₂ instead of observed CO₂\n",
@@ -1003,9 +1004,9 @@
     "# Fit a regression: TempChange ~ Fitted_CO2\n",
     "# This isolates temperature response to the CO₂ trend component only\n",
     "\n",
-    "m_temp_from_fitted = \n",
+    "m_temp_from_fitted = LinearRegression().fit(merged[['Fitted_CO2']], merged['TempChange'])\n",
     "\n",
-    "temp_pred_from_fitted = \n",
+    "temp_pred_from_fitted = m_temp_from_fitted.predict(merged[['Fitted_CO2']])\n",
     "\n",
     "# ----------------------------\n",
     "# Implementation Ends Here\n",
